--- a/unicore.content.models/Localisation/9d2ad7dd1a9d48c3968853ed2b4f5d61.json
+++ b/unicore.content.models/Localisation/9d2ad7dd1a9d48c3968853ed2b4f5d61.json
@@ -2,14 +2,14 @@
   "uuid": "9d2ad7dd1a9d48c3968853ed2b4f5d61", 
   "logo_image_host": "http://thumbor.unicore.io", 
   "locale": "spa_ES", 
-  "image": null, 
+  "image": "4b4237fd9eb14959a2a6a934df429085", 
   "logo_text": "", 
   "logo_image": null, 
   "_version": {
     "package_version": "1.4.4", 
     "language_version": "2.7.6", 
-    "language": "python", 
     "language_version_string": "2.7.6 (default, Jun 22 2015, 18:01:27) \n[GCC 4.8.2]", 
+    "language": "python", 
     "package": "elastic-git"
   }, 
   "logo_description": "", 
